# CPP-Macros

./: CMakeLists.txt
include/kani/: macros.hpp
test/: test.cpp
